--- a/examples/examplePlane.html
+++ b/examples/examplePlane.html
@@ -7,7 +7,7 @@
 
 <script src="kiwi.js"></script>
 <script src="Plane.js"></script>
-<script src="http://js.leapmotion.com/leap-0.4.1.min.js"></script>
+<script src="http://js.leapmotion.com/leap-0.6.0.js"></script>
 <script src="../LEAPController-0.1.4.js"></script>
 
 
