--- a/examples/exampleSimpleMove.html
+++ b/examples/exampleSimpleMove.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Leap Motion JavaScript Sample</title>
-<script src="http://js.leapmotion.com/leap-0.4.1.min.js"></script>
+<script src="http://js.leapmotion.com/leap-0.6.0.js"></script>
 
 <script src="kiwi.js"></script>
 <script src="simpleMove.js"></script>
